# MetisPar

./: CMakeLists.txt  vsgen.bat
GKlib/: gk_arch.h
amd/: GNUmakefile  amd.cmake  amd_internal.h  amd_order.c  amd_preprocess.c
amd/include/: amd.h
include/: metis.h
libmetis/: CMakeLists.txt  amd.c  balance.c  coarsen.c  contig.c  fm.c  fortran.c  frename.c  graph.c  initpart.c  macros.h  mcutil.c  metislib.h  ometis.c  options.c  proto.h  rcm.c  refine.c  rename.h  separator.c  sfm.c  srefine.c  struct.h  timing.c  util.c  wspace.c
programs/: CMakeLists.txt  data_formats.c  data_formats.h  demo_metis.c  demo_metis_mumps.c  demo_metis_pardiso.c
